// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events Корректный ввод в поле 1`] = `
<input
  class="App__string"
  data-testid="input"
  value="-0.1+0.2"
/>
`;

exports[`Events Корректный ввод в поле 2`] = `
<div
  class="App__result"
  data-testid="result"
>
  0.1
</div>
`;

exports[`Events Правильно считает 1`] = `
<input
  class="App__string"
  data-testid="input"
  value=""
/>
`;

exports[`Events Правильно считает 2`] = `
<div
  class="App__result"
  data-testid="result"
>
  0.3
</div>
`;

exports[`Events Приоритеты расставлены 1`] = `
<div
  class="App__result"
  data-testid="result"
>
  6
</div>
`;

exports[`Events Приоритеты расставлены 2`] = `
<div
  class="App__result"
  data-testid="result"
>
  3
</div>
`;

exports[`Events Приоритеты расставлены 3`] = `
<div
  class="App__result"
  data-testid="result"
>
  -2
</div>
`;

exports[`Events Приоритеты расставлены 4`] = `
<div
  class="App__result"
  data-testid="result"
>
  1
</div>
`;

exports[`Events Работают все кнопки 1`] = `
<input
  class="App__string"
  data-testid="input"
  value="789/456*123-0.2+2"
/>
`;

exports[`Events Рендер по умолчанию 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__calculator"
    >
      <div
        class="App__result"
        data-testid="result"
      />
      <input
        class="App__string"
        data-testid="input"
        value=""
      />
      <div
        class="App__keyboard"
        data-testid="keyboard"
      >
        <div>
          7
        </div>
        <div>
          8
        </div>
        <div>
          9
        </div>
        <div>
          ÷
        </div>
        <div>
          4
        </div>
        <div>
          5
        </div>
        <div>
          6
        </div>
        <div>
          ×
        </div>
        <div>
          1
        </div>
        <div>
          2
        </div>
        <div>
          3
        </div>
        <div>
          −
        </div>
        <div>
          0
        </div>
        <div>
          .
        </div>
        <div>
          =
        </div>
        <div>
          +
        </div>
      </div>
    </div>
  </div>
</div>
`;
